--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <li><a href="lk16.html">Создание клиентско дистрибьютерскую продажу</a></li>
     <li><a href="lk17.html">Карточка склада</a></li>
     <li><a href="lk18.html">Иерархия дочерних складов</a></li>
+    <li><a href="lk19.html">Движение денежных средств по складу</a></li>
+    <li><a href="lk20.html">Создание пользователей склада</a></li>
+    <li><a href="lk21.html">Пополнение</a></li>
+    <li><a href="lk21.html">Списание</a></li>
 </ul>
 </body>
 </html>
