--- a/lk21.html
+++ b/lk21.html
@@ -129,95 +129,9 @@
       </div>
       <div class="content">
         <div class="c_head">
-          <div style="margin-bottom: 15px">
-            <img src="./images/back.svg" alt="" style="float: left; margin-right: 10px; cursor: pointer">
-            <a href="#" class="back" style="display: block">Запросы от нижестоящих</a>
-          </div>
-          <div class="title_adaptive">
-            <h1>Заказ №20</h1>
-          </div>
-        </div>
-        <div class="component_head">
-          <div class="select">
-            <div class="select_one active">Просмотр</div>
-            <div class="select_one mailslog">Редактирование</div>
-          </div>
+          <h1>Пополнение</h1>
         </div>
         <div class="component">
-          <div class="component_body">
-            <h3>Комментарии</h3>
-            <div class="line_param_input">
-              <div class="l_p">
-                <div class="line_param">
-                  <div class="line_param_top">
-                    При создании
-                  </div>
-                  <div class="line_param_bottom">
-                    Комментарий при создании
-                  </div>
-                </div>
-                <div class="line_param">
-                  <div class="line_param_top">
-                    При оприходовании
-                  </div>
-                  <div class="line_param_bottom">
-                    Комментарий при оприходовании
-                  </div>
-                </div>
-              </div>
-              <div class="r_p">
-                <div class="line_param">
-                  <div class="line_param_top">
-                    При редактировании вышестоящим
-                  </div>
-                  <div class="line_param_bottom">
-                    Комментарий при редактировании вышестоящим
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="component_body">
-            <h3>Корзина</h3>
-            <div class="line_param_input">
-              <div class="l_p">
-                <div class="line_param">
-                  <div class="line_param_top">
-                    Сумма продажи:
-                  </div>
-                  <div class="line_param_bottom">
-                    3582.75
-                  </div>
-                </div>
-                <div class="line_param" style="margin-bottom: 0">
-                  <div class="line_param_top">
-                    Сумма баллов:
-                  </div>
-                  <div class="line_param_bottom">
-                    27.80
-                  </div>
-                </div>
-              </div>
-              <div class="r_p">
-                <div class="line_param">
-                  <div class="line_param_top">
-                    Всего единиц товара:
-                  </div>
-                  <div class="line_param_bottom">
-                    5
-                  </div>
-                </div>
-                <div class="line_param">
-                  <div class="line_param_top">
-                    Всего наименований:
-                  </div>
-                  <div class="line_param_bottom">
-                    3
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="component_body">
             <div class="f_part" style="padding-bottom: 35px">
               <div class="middle_part">
@@ -226,192 +140,116 @@
                     <tr class="head_t">
                       <th style="width: 35%">Наименование</th>
                       <th>Артикул</th>
-                      <th>Категория</th>
-                      <th>Цена</th>
                       <th>Баллы</th>
-                      <th>Запрос</th>
-                      <th>Поставка</th>
-                      <th>Приход</th>
+                      <th>Цена</th>
+                      <th>Остаток по складу</th>
+                      <th>Количество</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
                       <td>115</td>
-                      <td>VIP - Продукция</td>
-                      <td>128</td>
-                      <td>128</td>
                       <td>24</td>
                       <td>457</td>
-                      <td class="edit_column">
-                        <span class="not_edit">128</span>
-                        <div class="block_edit">
-                          <span class="line_param_top_edit">Приход</span>
-                          <input value="23 |" class="input_edit" style="background: inherit"/>
+                      <td>128</td>
+                      <td style="position: relative">
+                        <div class="block_edit_add">
+                          <span class="line_param_top_edit">Количество</span>
+                          <input value="23 |" class="input_edit" style="background: inherit" />
                           <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
                           <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
                         </div>
-                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
+                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon" style="display: block">
                       </td>
                     </tr>
                     <tr>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
                       <td>115</td>
-                      <td>VIP - Продукция</td>
-                      <td>128</td>
-                      <td>128</td>
                       <td>24</td>
                       <td>457</td>
-                      <td class="edit_column">
-                        <span class="not_edit">128</span>
-                        <div class="block_edit">
-                          <span class="line_param_top_edit">Приход</span>
+                      <td>128</td>
+                      <td style="position: relative">
+                        <div class="block_edit_add">
+                          <span class="line_param_top_edit">Количество</span>
                           <input value="23 |" class="input_edit" style="background: inherit" />
                           <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
                           <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
                         </div>
-                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
+                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon" style="display: block">
                       </td>
                     </tr>
                     <tr>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
                       <td>115</td>
-                      <td>VIP - Продукция</td>
-                      <td>128</td>
-                      <td>128</td>
                       <td>24</td>
                       <td>457</td>
-                      <td class="edit_column">
-                        <span class="not_edit">128</span>
-                        <div class="block_edit">
-                          <span class="line_param_top_edit">Приход</span>
+                      <td>128</td>
+                      <td style="position: relative">
+                        <div class="block_edit_add">
+                          <span class="line_param_top_edit">Количество</span>
                           <input value="23 |" class="input_edit" style="background: inherit" />
                           <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
                           <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
                         </div>
-                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
+                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon" style="display: block">
                       </td>
                     </tr>
                     <tr>
                       <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
                       <td>115</td>
-                      <td>VIP - Продукция</td>
-                      <td>128</td>
-                      <td>128</td>
                       <td>24</td>
                       <td>457</td>
-                      <td class="edit_column">
-                        <span class="not_edit">128</span>
-                        <div class="block_edit">
-                          <span class="line_param_top_edit">Приход</span>
+                      <td>128</td>
+                      <td style="position: relative">
+                        <div class="block_edit_add">
+                          <span class="line_param_top_edit">Количество</span>
                           <input value="23 |" class="input_edit" style="background: inherit" />
                           <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
                           <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
                         </div>
-                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>VIP - Продукция</td>
-                      <td>128</td>
-                      <td>128</td>
-                      <td>24</td>
-                      <td>457</td>
-                      <td class="edit_column">
-                        <span class="not_edit">128</span>
-                        <div class="block_edit">
-                          <span class="line_param_top_edit">Приход</span>
-                          <input value="23 |" class="input_edit" style="background: inherit" />
-                          <img src="./images/array-drop-top.svg" alt="array-drop-top" class="array_top_edit">
-                          <img src="./images/array-drop-down.svg" alt="array-drop-down" class="array_bottom_edit">
-                        </div>
-                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon">
+                        <img src="./images/delete.svg" alt="delete" class="input_edit_icon" style="display: block">
                       </td>
                     </tr>
                   </tbody>
                 </table>
               </div>
             </div>
-            <div class="line_param_input comment_block">
+            <div class="line_param_input">
               <div class="label_in">
                 <input type="text" class="tinput" required />
                 <label class="tlabel" style="top: auto">Оставить комментарий</label>
               </div>
               <div class="l_p" style="padding-bottom: 100px;">
                 <div class="nav_links">
-                  <a class="brd_green fill w50" href="#">Сохранить заявку</a>
-                  <a class="brd_green w50 last" href="#">Оприходовать</a>
+                  <a class="brd_green fill w50" href="#">Пополнить</a>
+                  <a class="brd_green w50 last" href="#">Отмена</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="footer" style="display: none">
+      <div class="footer">
         <div class="footer_line">
-          <div class="title_line">
-            <div class="title_line_t burger">Каталог</div>
+          <div class="title_line title_line_adaptive">
+            <div class="title_line_t filter">Каталог</div>
           </div>
           <div class="modal_line">
             <a href="#" class="closebig"></a>
-            <h3>Каталог</h3>
+            <h3>Фильтры поиска</h3>
             <div class="component_body">
               <div class="line_param_input">
                 <div class="label_in">
                   <input type="text" class="tinput" required />
-                  <label class="tlabel" style="top: 18px">Поиск по наименованию и артиклу</label>
+                  <label class="tlabel" for>Поиск по группе товаров</label>
+                  <span class="array_down"></span>
                 </div>
               </div>
-              <div class="f_part" style="padding-bottom: 0;">
-                <div class="middle_part">
-                  <table class="otch_p bordered">
-                    <thead>
-                    <tr class="head_t">
-                      <th style="width: 35%">Наименование</th>
-                      <th>Артикул</th>
-                      <th>Баллы</th>
-                      <th>Цена</th>
-                      <th>Остаток по складу</th>
-                      <th>Количество</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>24</td>
-                      <td>457</td>
-                      <td>128</td>
-                      <td>1</td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>24</td>
-                      <td>457</td>
-                      <td>128</td>
-                      <td>1</td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>24</td>
-                      <td>457</td>
-                      <td>128</td>
-                      <td>1</td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>24</td>
-                      <td>457</td>
-                      <td>128</td>
-                      <td>1</td>
-                    </tr>
-                    </tbody>
-                  </table>
+              <div class="r_p" style="float: right; padding-right: 0">
+                <div class="nav_links">
+                  <a class="brd_green fill w50" href="#">Показать</a>
+                  <a class="brd_green w50 last" href="#" style="margin-right: 0">Сбросить</a>
                 </div>
               </div>
             </div>
