Мобилка для новых страниц

--- a/lk13.html
+++ b/lk13.html
@@ -337,7 +337,7 @@
             <div class="line_param_input comment_block">
               <div class="label_in">
                 <input type="text" class="tinput" required />
-                <label class="tlabel" style="top: auto">Оставить комментарий</label>
+                <label class="tlabel t_label_adaptive" style="top: auto">Оставить комментарий</label>
               </div>
               <div class="l_p" style="padding-bottom: 100px;">
                 <div class="nav_links">
@@ -351,7 +351,7 @@
       </div>
       <div class="footer" style="display: none">
         <div class="footer_line">
-          <div class="title_line">
+          <div class="title_line title_line_adaptive">
             <div class="title_line_t burger">Каталог</div>
           </div>
           <div class="modal_line">
@@ -368,7 +368,7 @@
                 <div class="middle_part">
                   <table class="otch_p bordered">
                     <thead>
-                    <tr class="head_t">
+                      <tr class="head_t">
                       <th style="width: 35%">Наименование</th>
                       <th>Артикул</th>
                       <th>Баллы</th>
@@ -378,38 +378,22 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>24</td>
-                      <td>457</td>
-                      <td>128</td>
-                      <td>1</td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>24</td>
-                      <td>457</td>
-                      <td>128</td>
-                      <td>1</td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>24</td>
-                      <td>457</td>
-                      <td>128</td>
-                      <td>1</td>
-                    </tr>
-                    <tr>
-                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>115</td>
-                      <td>24</td>
-                      <td>457</td>
-                      <td>128</td>
-                      <td>1</td>
-                    </tr>
+                      <tr>
+                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                        <td>115</td>
+                        <td>24</td>
+                        <td>457</td>
+                        <td>128</td>
+                        <td>1</td>
+                      </tr>
+                      <tr>
+                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                        <td>115</td>
+                        <td>24</td>
+                        <td>457</td>
+                        <td>128</td>
+                        <td>1</td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
