--- a/lk22.html
+++ b/lk22.html
@@ -218,7 +218,7 @@
             <div class="line_param_input">
               <div class="label_in">
                 <input type="text" class="tinput" required />
-                <label class="tlabel" style="top: auto">Оставить комментарий</label>
+                <label class="tlabel t_label_adaptive" style="top: auto">Оставить комментарий</label>
               </div>
               <div class="l_p" style="padding-bottom: 100px;">
                 <div class="nav_links">
@@ -233,7 +233,7 @@
       <div class="footer">
         <div class="footer_line">
           <div class="title_line title_line_adaptive">
-            <div class="title_line_t filter">Каталог</div>
+            <div class="title_line_t burger">Каталог</div>
           </div>
           <div class="modal_line">
             <a href="#" class="closebig"></a>
