Кое-какие дополнения

--- a/lk20.html
+++ b/lk20.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная</title>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="css/320.css" type="text/css" media="screen" />
 </head>
 <body>
 <div class="fullWidth">
@@ -132,13 +133,15 @@
         </div>
         <div class="component">
           <div class="component_body">
-            <div class="f_part">
-              <div class="l_p" style="padding-right: 0; margin-bottom: 20px">
-                <div class="nav_links" style="margin-top: 0">
-                  <a class="brd_green fill w50 add_partner" href="#">Создать пользователя</a>
-                  <a class="brd_green w50 last" href="#" style="margin-right: 0">Редактировать пользователя</a>
+            <div class="line_param_input">
+              <div class="l_p">
+                <div class="nav_links" style="margin: 0">
+                  <a class="brd_green fill w50" href="#">Пополнить</a>
+                  <a class="brd_green w50 last" href="#">Отмена</a>
                 </div>
               </div>
+            </div>
+            <div class="f_part" style="margin-top: 30px">
               <div class="nav_top">
                 <ul>
                   <li><a href="#">Экспорт в Excel</a></li>
@@ -375,7 +378,7 @@
       </div>
       <div class="footer">
         <div class="footer_line">
-          <div class="title_line">
+          <div class="title_line title_line_adaptive">
             <div class="title_line_t filter">Фильтры</div>
           </div>
           <div class="modal_line">
