--- a/lk1.html
+++ b/lk1.html
@@ -119,7 +119,8 @@
               </div>
               <div class="acc_nav">
                 <ul>
-                  <li><a href="#">Козлов В.И.</a></li>
+                  <li><a href="#"><span>Наименование склада</span>Томск-Кондырева (Мошкина)</a></li>
+                  <li><a href="#"><span>Пользователь</span>Козлов В.И.</a></li>
                   <li><a href="#"><span>Роль</span>Управляющий</a></li>
                   <li class="logout"><a href="#">Выйти</a></li>
                 </ul>
