--- a/lk4.html
+++ b/lk4.html
@@ -108,26 +108,27 @@
           </ul>
         </div>
       </div>
-        <div class="header">
-            <div class="acc_b">
-                <div class="acc_b_menu">
-                    <img src="images/burger-menu.svg" alt="">
-                </div>
-                <div class="acc_n">
-                    <div class="acc_n_text">Козлов В.И.</div>
-                    <div class="acc_n_ico">
-                        <img src="images/avatar.svg" alt=""/>
-                    </div>
-                    <div class="acc_nav">
-                        <ul>
-                            <li><a href="#">Козлов В.И.</a></li>
-                            <li><a href="#"><span>Роль</span>Управляющий</a></li>
-                            <li class="logout"><a href="#">Выйти</a></li>
-                        </ul>
-                    </div>
-                </div>
+      <div class="header">
+        <div class="acc_b">
+          <div class="acc_b_menu">
+            <img src="images/burger-menu.svg" alt="">
+          </div>
+          <div class="acc_n">
+            <div class="acc_n_text">Козлов В.И.</div>
+            <div class="acc_n_ico">
+              <img src="images/avatar.svg" alt=""/>
             </div>
+            <div class="acc_nav">
+              <ul>
+                <li><a href="#"><span>Наименование склада</span>Томск-Кондырева (Мошкина)</a></li>
+                <li><a href="#"><span>Пользователь</span>Козлов В.И.</a></li>
+                <li><a href="#"><span>Роль</span>Управляющий</a></li>
+                <li class="logout"><a href="#">Выйти</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </div>
       <div class="content">
         <!-- ШАПКА КОНТЕНТНОЙ ЧАСТИ -->  
         <div class="c_head">  
